[metadata]
name = django-utilitas
version = 1.2.4
description = Django package with useful utility classes
long_description = file:README.md
url = https://github.com/ninnroot/utilitas

[options]
include_package_data = true
python_requires = >=3.7
setup_requires = setuptools >= 65.3.0
install_requires =
    Django>=4.0
    drf-yasg>=1.21.4
    djangorestframework>=3.14.0
    drf-flex-fields>=1.0.0
